--- a/6.4-PostgreSQL.md
+++ b/6.4-PostgreSQL.md
@@ -1,7 +1,7 @@
 # Домашнее задание к занятию "6.4. PostgreSQL"
 
 
-## Pадача 1
+## Задача 1
 Используя docker поднимите инстанс PostgreSQL (версию 13). Данные БД сохраните в volume.
 Подключитесь к БД PostgreSQL используя psql.
 Воспользуйтесь командой \? для вывода подсказки по имеющимся в psql управляющим командам.
