--- a/7.5-golang.md
+++ b/7.5-golang.md
@@ -1,7 +1,7 @@
 # Домашнее задание к занятию "7.5. Основы golang"
 
 
-## Pадача 1
+## Задача 1
 1. Воспользуйтесь инструкций с официального сайта: https://golang.org/.
 2. Так же для тестирования кода можно использовать песочницу: https://play.golang.org/.
 
